[package]
name = "vec-unpack"
version = "0.1.0"
authors = ["Takumi Watanabe"]
edition = "2021"
license = "MIT"
description = "Creates a Vec containing the arguments. vecu! unpacks iterable variables marked with @."
readme = "README.md"
repository = "https://github.com/sinotca529/vec-unpack"
categories = ["accessibility"]
keywords = ["vec", "unpack"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
